[tool.poetry]
name = "iracing-web-api"
version = "0.1.0"
description = ""
authors = ["scullionw <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
